@@ -38,6 +38,21 @@
 #include "i18n.h"
 #include "gtkutils.h"
 
+
+/*
+ * not all systems have defined __compar_fn_t, original definition
+ *  from glibc stdlib.h follows
+ */
+/* Shorthand for type of comparison functions.  */
+#ifndef __COMPAR_FN_T
+# define __COMPAR_FN_T
+typedef int (*__compar_fn_t) __PMT ((__const __ptr_t, __const __ptr_t));
+
+# ifdef	__USE_GNU
+typedef __compar_fn_t comparison_fn_t;
+# endif
+#endif
+
 typedef struct _PList PList;
 typedef struct _PDlgWidgets PDlgWidgets;
 typedef struct _PrintData PrintData;
